# daiex

./: CMakeLists.txt  README.md  conanfile.py  license.txt
app/: CMakeLists.txt
app/src/: main.cpp
cmake/modules/: FindArchive.cmake  FindLibHdf5.cmake  FindLibMatIo.cmake  FindZLib.cmake
lib/: .jazzignore  CMakeLists.txt  libdai.rc
lib/aid/include/: ActionEvent.h  ActionListener.h  AmlabCommon.h  ArrayComplex.h  ArrayContainer.h  ArrayContainerIpp.h  ArrayPolicyResizeDefault.h  ArrayReal.h  Defines.h  ErrCtrl.h  ErrorCode.h  Generic.h  IFileReader.h  IFileWriter.h  IIQObserver.h  IIQSink.h  IIQSource.h  Object.h  Singleton.h  SingletonImpl.h  Types.h  TypesExtended.h  ZFFileReader.h  ZFFileReaderImpl.h  ZFFileWriter.h  ZFFileWriterImpl.h  replacement.h  rs_gx40x_global_frame_header_if_defs.h  rs_gx40x_global_frame_types_if_defs.h  rs_gx40x_global_ifdata_header_if_defs.h  rs_gx40x_p_types.h
lib/aid/src/: ActionEvent.cpp  ArrayComplex.cpp  ArrayReal.cpp  ErrCtrl.cpp  ErrorCode.cpp  ZFFileReader.cpp  ZFFileReaderImpl.cpp  ZFFileWriter.cpp  ZFFileWriterImpl.cpp  replacement.cpp
lib/doc/: Doxyfile.in  DoxygenLayout.xml  Inventory.xml  Inventory.xsd  Inventory_readme.txt  ReleaseNotes.txt  mainpage.dox  wrapper.dox
lib/include/: CLBWvInFile.h  IWvIn.h  WvScramblerBase.h  aid.h  aidpimpl.h  aligned.hpp  channelinfo.h  common.h  constants.h  csv_reader.h  csv_writer.h  daiexception.h  dataimportexport.h  dataimportexportbase.h  enums.h  errorcodes.h  exportdecl.h  filetypeservice.h  ianalyzecontent.h  ianalyzecontentiqtar.h  iarrayselector.h  icsvselector.h  idataimportexport.h  iqcsv.h  iqcsvpimpl.h  iqmatlab.h  iqmatlab_reader.h  iqmatlab_writer.h  iqmatlabpimpl.h  iqtar.h  iqtar_iq_preview.h  iqtar_preview.h  iqtar_preview_types.h  iqtar_reader.h  iqtar_trace_preview.h  iqtar_writer.h  iqtarpimpl.h  iqw.h  iqwpimpl.h  iqx.h  (+13 more)
lib/iqxformat/: CMakeLists.txt
lib/iqxformat/include/iqxformat/: iqxfile.h  iqxtypes.h
lib/iqxformat/src/: aligned_allocator.h  iqbitconverter.h  iqxfile.cpp  iqxfileimpl.cpp  iqxfileimpl.h  iqxframe.cpp  iqxframe.h  wincompat.h
lib/iqxformat/test/: CMakeLists.txt  test_iqxformat.cpp  test_iqxformat.h
lib/src/: CLBWvInFile.cpp  WvScramblerBase.cpp  aid.cpp  aidpimpl.cpp  channelinfo.cpp  common.cpp  constants.cpp  csv_reader.cpp  csv_writer.cpp  dataimportexportbase.cpp  errorcodes.cpp  filetypeservice.cpp  iqcsv.cpp  iqcsvpimpl.cpp  iqmatlab.cpp  iqmatlab_reader.cpp  iqmatlab_writer.cpp  iqmatlabpimpl.cpp  iqtar.cpp  iqtar_preview.cpp  iqtar_reader.cpp  iqtar_writer.cpp  iqtarpimpl.cpp  iqw.cpp  iqwpimpl.cpp  mosaikiqx.cpp  mosaikiqximpl.cpp  settings.cpp  wv.cpp  wvpimpl.cpp
lib/src/platform/: platform_linux.cpp  platform_win.cpp
test/: CMakeLists.txt
test/res/: CorruptTarHeader.iq.tar  FG_Sine_0.35MHz.wv  FG_Sine_1MHz_080deg.wv  FromFSW_1ch_WithPreview.iq.tar  FromFSW_1ch_asiqw.iqw  MissingTag.iq.tar  MissingXML.iq.tar  MultiChannel_Mosaik_ANSI.csv  QueryMat.mat  RawArrayDecimalColonValueSemicolon.csv  RawArrayDecimalDotValueColon.csv  RawArrayDecimalDotValueSemicolon.csv  RawArrayInvalid.csv  RawArrayInvalidWithString.csv  ReadGenuineMatFiles_v6.mat  ReadGenuineMatFiles_v7.mat  ReadGenuineMatFiles_v73.mat  TestScalingFactorAsDouble.iq.tar  TestScalingFactorNot1.iq.tar  WrongValueFormat.iq.tar  записано.csv  записано.iq.tar  записано.mat
test/src/: aidtest.cpp  arraytest.cpp  bigfiletests.cpp  common.cpp  common.h  csvtest.cpp  filetypeservicetest.cpp  formattests.cpp  iqtartest_error_handling.cpp  iqtartest_legacy_files.cpp  iqtartests.cpp  iqwtest.cpp  iqxtest.cpp  main.cpp  matlabtests.cpp  readrealtest.cpp  readtest.cpp  writechannelstest.cpp  writetest.cpp  wvtest.cpp
wrapper/: CMakeLists.txt  daiex_wrapper.vcxproj.filters.in  daiex_wrapper.vcxproj.in  libdai_wrapper.rc
wrapper/include/: assemblyInfo.h  channelinfo_wrapper.h  dataimportexportbase_wrapper.h  enums_wrapper.h  exceptions.h  filetypeservice_wrapper.h  helpers.h  iarrayselector_wrapper.h  icsvselector_wrapper.h  idataimportexport_wrapper.h  iqcsv_wrapper.h  iqmatlab_wrapper.h  iqtar_wrapper.h  iqw_wrapper.h  settings_wrapper.h
wrapper/src/: assemblyInfo.cpp  channelinfo_wrapper.cpp  dataimportexportbase_wrapper.cpp  filetypeservice_wrapper.cpp  helpers.cpp  iqcsv_wrapper.cpp  iqmatlab_wrapper.cpp  iqtar_wrapper.cpp  iqw_wrapper.cpp  settings_wrapper.cpp
wrapper_test/: CMakeLists.txt  daiex_wrapper_test.csproj.in
wrapper_test/src/: AssemblyInfo.cs  Common.cs  InterfaceTest.cs  SettingsTest.cs
