#
# Mosaik.LibdataImportExport/app
#

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_LIST_DIR}/../lib/include )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_LIST_DIR}/src )

ADD_LIBRARY( libdai SHARED IMPORTED )
SET_PROPERTY( TARGET libdai PROPERTY INTERFACE_INCLUDE_DIRECTORIES  ${CMAKE_CURRENT_LIST_DIR}/../lib/include )

IF( WIN32 )

  SET_PROPERTY( TARGET libdai PROPERTY IMPORTED_IMPLIB ${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE}/daiex.lib )
ELSEIF( APPLE )  
  SET_PROPERTY( TARGET libdai PROPERTY IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/lib/libdaiex.dylib )
ELSEIF( UNIX )

  SET_PROPERTY( TARGET libdai PROPERTY IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/lib/libdaiex.so )

ENDIF()


FILE( GLOB SOURCES 
  src/* )
ADD_EXECUTABLE( daiapp ${SOURCES} )


IF( WIN32 )

  TARGET_LINK_LIBRARIES( daiapp libdai )

ELSEIF( UNIX )

  TARGET_LINK_LIBRARIES( daiapp libdai dl )

ENDIF()


### installer

install( FILES
  src/main.cpp
  DESTINATION sample )